[package]
name = "thyme-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
enum_dispatch = "0.3.13"

# I/O
image = "0.25.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.133"
npyz = { version = "0.8.3", features = ["npz"] }
zip = "2.2.2"
polars = { version = "0.46.0", features = ["parquet"] }

# Parallelism
rayon = "1.10.0"

# Image processing, linear algebra, matrices, and numbers
fast_image_resize = { version = "5", features = ["image"] }
nalgebra = "0.33.2"
num-traits = "0.2.19"
num = "0.4.3"
lstsq = "0.6.0"

# CLI & Utilities
kdam = { version = "0.6.1", features = ["template", "rayon"] }
chrono = "0.4.38"
colored = "2.1.0"
